# microsoft-agent-governance-toolkit

./: .cspell-repo-terms.txt  .cspell.json  .gitignore  CHANGELOG.md  README.md  mkdocs.yml
.github/: dependabot.yml
.github/linters/: markdown-link-check.json
.github/pipelines/: esrp-publish.yml
.github/workflows/: ci.yml
agent-governance-dotnet/tests/AgentGovernance.Tests/: AgentGovernance.Tests.csproj
agent-governance-python/agent-compliance/examples/: requirements.txt
agent-governance-python/agent-discovery/: pyproject.toml
agent-governance-python/agent-governance-toolkit-integrations/: pyproject.toml
agent-governance-python/agent-hypervisor/: pyproject.toml
agent-governance-python/agent-marketplace/tests/: test_marketplace.py
agent-governance-python/agent-mesh/: pyproject.toml
agent-governance-python/agent-mesh/examples/01-mcp-tool-server/: main.py
agent-governance-python/agent-mesh/src/agentmesh/identity/: entra_verifier.py
agent-governance-python/agent-mesh/src/agentmesh/registry/: app.py  store.py
agent-governance-python/agent-mesh/tests/: test_entra_verifier.py  test_mcp_tool_server_example.py  test_registry.py
agent-governance-python/agent-os/: pyproject.toml
agent-governance-python/agent-os/extensions/copilot/: package-lock.json  package.json
agent-governance-python/agent-os/modules/nexus/: pyproject.toml
agent-governance-python/agent-os/src/agent_os/policies/: __init__.py  schema.py
agent-governance-python/agent-primitives/: pyproject.toml
agent-governance-python/agent-sandbox/: README.md
agent-governance-python/agent-sandbox/src/agent_sandbox/: __init__.py  _hardening.py
agent-governance-python/agent-sandbox/src/agent_sandbox/docker_provider/: provider.py
agent-governance-python/agent-sandbox/src/agent_sandbox/mxc_sandbox_provider/: __init__.py  config.py  provider.py
agent-governance-python/agent-sandbox/tests/: test_docker_sandbox.py  test_mxc_integration.py  test_mxc_sandbox.py
agent-governance-python/agent-sandbox/tutorials/mxc-quickstart/: README.md  quickstart.py
agent-governance-python/agentmesh-integrations/copilot-governance/: package-lock.json
agent-governance-python/agentmesh-integrations/mastra-agentmesh/: package-lock.json
agent-governance-rust/: Cargo.toml  README.md
agent-governance-rust/agentmesh/: Cargo.toml  README.md
agent-governance-rust/agentmesh-mcp/: README.md
agent-governance-rust/agentmesh-mcp/src/mcp/: rate_limit.rs
agent-governance-rust/agentmesh/examples/: audit-logging.rs  quickstart.rs
agent-governance-rust/agentmesh/src/: control_support.rs  governance_support.rs  integration_support.rs  lib.rs  policy.rs  prompt_injection.rs  rings.rs  sandbox.rs  sandbox_test.rs  telemetry.rs
agent-governance-rust/agentmesh/src/mcp/: mod.rs  session.rs
agent-governance-rust/agentmesh/tests/: cli.rs  prompt_defense_compat.rs  prompt_injection.rs  telemetry.rs
docs/: CHARTER.md  RELEASE.md  index.md  owasp-asi-mapping.md  quickstart.md
docs/dependency-audits/: 2026-05-17-rust-fastrand-lockfile.md  2026-06-11-regex-1.12.4.md
docs/integrations/: citadel-integration.md
docs/javascripts/: site.js
docs/proposals/: MXC-SANDBOX-PROVIDER.md
docs/releases/: RELEASE_NOTES_v3.6.0.md
docs/security/audits/: 2026-06-11-sandbox-mounts-policy-field.md
docs/stylesheets/: mslearn.css
docs/tutorials/: 36-govern-quickstart.md  44-a2a-conversation-policy.md
examples/citadel-governed-agent/: README.md
examples/demos/presentation/: README.md  demo-1-install-health-check.ps1  demo-2-owasp-verify.ps1  demo-3-policy-enforcement.ps1  demo-4-trust-scoring.ps1  demo-5-framework-integration.ps1  demo-6-eu-ai-act.ps1  demo-run-all.ps1  demo5_framework.py
examples/policy-templates/: financial-services.yaml  general-saas.yaml  healthcare.yaml
tests/redteam/: README.md
